--- a/index.html
+++ b/index.html
@@ -46,12 +46,9 @@
             <fieldset>
                 <legend>Sing Up Form</legend>
                 <div class="grid">
-                     <div>Name</div>
+                     
+                     <div>User Name</div>
                      <div><input type="text" ></div>
-                     <div>Surname</div>
-                     <div><input type="text" ></div>
-                     <div>DOB</div>
-                     <div><input type="date" ></div>
                      <div>Email</div>
                      <div><input type="email" ></div>
                      <div>Skills</div>
