--- a/index.html
+++ b/index.html
@@ -41,29 +41,17 @@
            </form>
        </label> 
        <label>
-        <input type="checkbox" class="chk">Sing In
-        <form class="form-singup" autocomplete="off">
+        <input type="checkbox" class="chek">Sing In
+        <form class="form-singin" autocomplete="off">
             <fieldset>
-                <legend>Sing Up Form</legend>
+                <legend>Sing In Form</legend>
                 <div class="grid">
                      
                      <div>User Name</div>
                      <div><input type="text" ></div>
                      <div>Email</div>
                      <div><input type="email" ></div>
-                     <div>Skills</div>
-                     <div>
-                         <select  >
-                                 <option value="HTML">HTML</option>
-                                 <option value="CSS">CSS</option>
-                                 <option value="JS">JS</option>
-                                 <option value="REACT">REACT</option>
-                                 <option value="REACT NATIVE">REACT NATIVE</option>
-                             </select>
-                         </div>
-                         <div>Gender</div>
-                         <div><input type="radio" >Male</div>
-                         <div><input type="radio" >Female</div>
+                     
                          <div><input type="submit" value="SUBMIT"></div>
                  </div>
             </fieldset>
