added css style

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                </fieldset>
            </form>
        </label> 
-       <label>
+       <label class="lblin">
         <input type="checkbox" class="chek">Sing In
         <form class="form-singin" autocomplete="off">
             <fieldset>
